[package]
name = "reliable"
version = "0.0.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
build = "rust/build.rs"
links = "libreliable"
keywords = ["reliable"]
license = "BSD-3-Clause"
repository = "https://github.com/jaynus/reliable.io"
description = "Wrapper for reliable.io library"
edition = "2018"

[dependencies]
log = "0.4"
byteorder = "1.3"
len-trait = "0.6"

[dev-dependencies]
env_logger = "0.7"

[build-dependencies]
cc = "1.0"
bindgen = "0.62.0"

[lib]
path = "rust/src/lib.rs"
